# SPDX-FileCopyrightText: GARDENA GmbH
#
# SPDX-License-Identifier: MIT

[package]
name = "gardenalog"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
libc = { version = "0.2", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
