# SPDX-FileCopyrightText: GARDENA GmbH
#
# SPDX-License-Identifier: MIT

[package]
name = "lsdl"
version = "0.1.0"
authors = ["Michael Zimmermann <michael.zimmermann@grandcentrix.net>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
hex = { version = "0.4", features = ["serde"] }
lsdl-sys = { path = "../lsdl-sys" }
num-derive = "0.4"
num-traits = "0.2"
quick-xml = "0.23"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[build-dependencies]
xsd2rust = { path = "../xsd2rust" }
