[package]
name = "lwm2m-objgen"
version = "0.1.0"
authors = ["Michael Zimmermann <michael.zimmermann@grandcentrix.net>"]
edition = "2021"

[[bin]]
name = "lwm2m-objgen"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0"
convert_case = "0.7.1"
lwm2m-types = { path = "../lwm2m-types" }
proc-macro2 = "1.0"
quick-xml = { version = "0.23", features = ["serde", "serialize"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
