[package]
name = "tokio-task-rpc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.1"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive", "extra-traits", "full"] }

[dev-dependencies]
anyhow = "1.0"
futures-util = { version = "0.3", features = [] }
rpc-mpsc = { path = "../rpc-mpsc" }
tokio = { version = "=1.43.0", features = ["sync"] }
tokio-task-rpc-util = { path = "../tokio-task-rpc-util" }
tracing = "0.1"
