# SPDX-FileCopyrightText: GARDENA GmbH
#
# SPDX-License-Identifier: MIT

[package]
name = "tokioutil"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
tokio_tracing = ["tokio/tracing"]

[dependencies]
tokio = "1.43.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
