[package]
name = "xsd2rust"
version = "0.1.0"
authors = ["Michael Zimmermann <michael.zimmermann@grandcentrix.net>"]
edition = "2021"

[[bin]]
name = "xsd2rust"
path = "bin/main.rs"

[dependencies]
proc-macro2 = "1.0"
quick-xml = { version = "0.23", features = ["serde", "serialize"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
